# cpp_and_cmake_practice

./: CMakeLists.txt  CMakeSettings.json
Allocating Memory/: Allocating Memory.cpp  CMakeLists.txt
Arrays And Functions/: Arrays and Functions.cpp  CMakeLists.txt
Bit Shifting/: Bit Shifting.cpp  CMakeLists.txt
CMakeProjectDemo/: CMakeLists.txt  CMakeProjectDemo.cpp  person.cpp  person.h
Const/: CMakeLists.txt  Const.cpp  CopyConstructors.cpp
Encapsulation/: CMakeLists.txt  Encapsulation.cpp
Inheritance/: CMakeLists.txt  Inheritance.cpp
Inheritance and Construction/: CMakeLists.txt  Inheritance and Construction.cpp
Namespaces/: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Namespaces.cpp
New Operator/: CMakeLists.txt  New Operator.cpp
References/: CMakeLists.txt  References.cpp
Returning Objects from Methods/: CMakeLists.txt  main.cpp
Reversing_a_string/: CMakeLists.txt  Reversing_a_String.cpp
SDL Adding a SetPixel Method/: CMakeLists.txt  Main.cpp  Screen.cpp
SDL Animating Colors/: CMakeLists.txt  Main.cpp
SDL Animating Particles/: CMakeLists.txt  Main.cpp  Particle.cpp  Particle.h  Swarm.cpp  Swarm.h
SDL Basic/: CMakeLists.txt  Main.cpp
SDL Blurring the Screen/: CMakeLists.txt  Main.cpp  Particle.cpp  Particle.h  Screen.cpp  Screen.h
SDL Constant Speed in Games/: CMakeLists.txt  Main.cpp  Swarm.cpp  Swarm.h
SDL Creating Explosion/: CMakeLists.txt  Main.cpp  Particle.cpp  Particle.h  Screen.cpp  Screen.h  Swarm.h
SDL Creating Particle/: CMakeLists.txt  Main.cpp  Particle.cpp  Particle.h  Screen.cpp  Screen.h  Swarm.cpp  Swarm.h
SDL Creating the Screen Object/: CMakeLists.txt  Main.cpp  Screen.cpp  Screen.h
SDL Enabling Pixel Access/: CMakeLists.txt  Main.cpp
SDL Particle Motion/: CMakeLists.txt  Particle.cpp  Particle.h
SDL Window/: CMakeLists.txt  Main.cpp
SDL Writing Pixels/: CMakeLists.txt  Main.cpp
SDL-Test/: CMakeLists.txt
Simulated Explosions/: CMakeLists.txt  Fetching.cpp
Static/: CMakeLists.txt  Static.cpp
TestLibrary/: CMakeLists.txt  TestLibrary.cpp
Two Complement/: CMakeLists.txt  Two Complement.cpp
animal/: CMakeLists.txt  Cat.cpp  Cat.h
lib/: SDL2.md
